--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <button id="ask-grid-btn">Grid</button>
-    </header>
+    <header></header>
     <main>
-      <section id="drawing-board"></section>
+      <div class="wrapper">
+        <div class="buttons">
+          <button class="grid-btn" data-value="8">8x8</button>
+          <button class="grid-btn" data-value="12">12x12</button>
+          <button class="grid-btn" data-value="16">16x16</button>
+          <button class="grid-btn" data-value="32">32x32</button>
+          <button class="grid-btn" data-value="64">64x64</button>
+        </div>
+
+        <section id="drawing-board"></section>
+      </div>
     </main>
 
     <script src="./main.js"></script>
