--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <h1 class="name"></h1>
           </div>
           <div>
-            <button class="saved-color">color</button>
-            <button class="saved-color">color</button>
-            <button class="saved-color">color</button>
+            <button class="saved-color one" data-color="black"></button>
+            <button class="saved-color two" data-color="red"></button>
+            <button class="saved-color three" data-color="blue"></button>
           </div>
         </div>
       </section>
