made a lot of changes + adding color to the pallete fucntionality

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <div class="color-picker">
           <div class="wheel">
             <input type="color" />
-            <h1 class="name"></h1>
+            <button class="add-color">Add to pallete</button>
           </div>
-          <div>
-            <button class="saved-color one" data-color="black"></button>
-            <button class="saved-color two" data-color="red"></button>
-            <button class="saved-color three" data-color="blue"></button>
+          <div class="static">
+            <button class="saved-color" data-color="black"></button>
+            <button class="saved-color" data-color="red"></button>
+            <button class="saved-color" data-color="blue"></button>
+            <button class="saved-color" data-color="green"></button>
+            <button class="saved-color" data-color="yellow"></button>
           </div>
         </div>
       </section>
