added active color

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div class="color-picker">
           <div class="active-color">
-            <h1>Active Color</h1>
-            <div></div>
+            <h1>Active</h1>
+            <div class="box"></div>
           </div>
           <div class="wheel">
             <input type="color" />
